--- a/evaluaciones/bloque-2/solucion-caso-practico/scouting_analysis_solucion.ipynb
+++ b/evaluaciones/bloque-2/solucion-caso-practico/scouting_analysis_solucion.ipynb
@@ -1,6 +1,128 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fa3a2b6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔧 CONFIGURACIÓN DEL ENTORNO DE ANÁLISIS DE SCOUTING\n",
+      "=======================================================\n",
+      "📦 Verificando e instalando dependencias...\n",
+      "📁 Archivo requirements: /home/julihocc/topico/main.worktrees/evaluation-design/requirements.txt\n",
+      "✅ Dependencias instaladas correctamente\n",
+      "\n",
+      "🔍 Verificando paquetes críticos:\n",
+      "✅ pandas\n",
+      "✅ numpy\n",
+      "✅ matplotlib\n",
+      "✅ seaborn\n",
+      "✅ scikit-learn\n",
+      "✅ scipy\n",
+      "\n",
+      "🎉 ¡Todos los paquetes necesarios están disponibles!\n",
+      "🚀 Listo para análisis avanzado de scouting\n",
+      "\n",
+      "=======================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verificación e instalación automática de dependencias\n",
+    "import subprocess\n",
+    "import sys\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def install_requirements():\n",
+    "    \"\"\"\n",
+    "    Verifica e instala las dependencias necesarias desde requirements.txt\n",
+    "    \"\"\"\n",
+    "    # Buscar archivo requirements.txt en el directorio del proyecto\n",
+    "    current_dir = Path(__file__).parent if '__file__' in globals() else Path.cwd()\n",
+    "    project_root = current_dir.parent.parent.parent  # Ir al directorio raíz del proyecto\n",
+    "    requirements_file = project_root / 'requirements.txt'\n",
+    "    \n",
+    "    if not requirements_file.exists():\n",
+    "        print(\"⚠️ Archivo requirements.txt no encontrado\")\n",
+    "        print(f\"Buscado en: {requirements_file}\")\n",
+    "        return False\n",
+    "    \n",
+    "    print(\"📦 Verificando e instalando dependencias...\")\n",
+    "    print(f\"📁 Archivo requirements: {requirements_file}\")\n",
+    "    \n",
+    "    try:\n",
+    "        # Instalar dependencias\n",
+    "        result = subprocess.run([\n",
+    "            sys.executable, '-m', 'pip', 'install', '-r', str(requirements_file)\n",
+    "        ], capture_output=True, text=True, check=True)\n",
+    "        \n",
+    "        print(\"✅ Dependencias instaladas correctamente\")\n",
+    "        return True\n",
+    "    \n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        print(\"❌ Error instalando dependencias:\")\n",
+    "        print(f\"Error: {e.stderr}\")\n",
+    "        return False\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error inesperado: {e}\")\n",
+    "        return False\n",
+    "\n",
+    "def verify_package(package_name, import_name=None):\n",
+    "    \"\"\"\n",
+    "    Verifica si un paquete está instalado e importable\n",
+    "    \"\"\"\n",
+    "    if import_name is None:\n",
+    "        import_name = package_name\n",
+    "    \n",
+    "    try:\n",
+    "        __import__(import_name)\n",
+    "        return True\n",
+    "    except ImportError:\n",
+    "        return False\n",
+    "\n",
+    "# Ejecutar verificación e instalación\n",
+    "print(\"🔧 CONFIGURACIÓN DEL ENTORNO DE ANÁLISIS DE SCOUTING\")\n",
+    "print(\"=\" * 55)\n",
+    "\n",
+    "# Instalar dependencias\n",
+    "install_success = install_requirements()\n",
+    "\n",
+    "# Verificar paquetes críticos\n",
+    "critical_packages = [\n",
+    "    ('pandas', 'pandas'),\n",
+    "    ('numpy', 'numpy'), \n",
+    "    ('matplotlib', 'matplotlib'),\n",
+    "    ('seaborn', 'seaborn'),\n",
+    "    ('scikit-learn', 'sklearn'),\n",
+    "    ('scipy', 'scipy')\n",
+    "]\n",
+    "\n",
+    "print(\"\\n🔍 Verificando paquetes críticos:\")\n",
+    "all_available = True\n",
+    "for package, import_name in critical_packages:\n",
+    "    available = verify_package(package, import_name)\n",
+    "    status = \"✅\" if available else \"❌\"\n",
+    "    print(f\"{status} {package}\")\n",
+    "    if not available:\n",
+    "        all_available = False\n",
+    "\n",
+    "if all_available:\n",
+    "    print(\"\\n🎉 ¡Todos los paquetes necesarios están disponibles!\")\n",
+    "    print(\"🚀 Listo para análisis avanzado de scouting\")\n",
+    "else:\n",
+    "    print(\"\\n⚠️ Algunos paquetes no están disponibles\")\n",
+    "    print(\"💡 Ejecute: pip install -r requirements.txt\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 55)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2ab0c104",
    "metadata": {},
@@ -29,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "07dffd79",
    "metadata": {},
    "outputs": [
@@ -86,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "364605cd",
    "metadata": {},
    "outputs": [
