--- a/evaluaciones/bloque-2/solucion-caso-practico/scouting_analysis_solucion.ipynb
+++ b/evaluaciones/bloque-2/solucion-caso-practico/scouting_analysis_solucion.ipynb
@@ -1,128 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fa3a2b6e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔧 CONFIGURACIÓN DEL ENTORNO DE ANÁLISIS DE SCOUTING\n",
-      "=======================================================\n",
-      "📦 Verificando e instalando dependencias...\n",
-      "📁 Archivo requirements: /home/julihocc/topico/main.worktrees/evaluation-design/requirements.txt\n",
-      "✅ Dependencias instaladas correctamente\n",
-      "\n",
-      "🔍 Verificando paquetes críticos:\n",
-      "✅ pandas\n",
-      "✅ numpy\n",
-      "✅ matplotlib\n",
-      "✅ seaborn\n",
-      "✅ scikit-learn\n",
-      "✅ scipy\n",
-      "\n",
-      "🎉 ¡Todos los paquetes necesarios están disponibles!\n",
-      "🚀 Listo para análisis avanzado de scouting\n",
-      "\n",
-      "=======================================================\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Verificación e instalación automática de dependencias\n",
-    "import subprocess\n",
-    "import sys\n",
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "def install_requirements():\n",
-    "    \"\"\"\n",
-    "    Verifica e instala las dependencias necesarias desde requirements.txt\n",
-    "    \"\"\"\n",
-    "    # Buscar archivo requirements.txt en el directorio del proyecto\n",
-    "    current_dir = Path(__file__).parent if '__file__' in globals() else Path.cwd()\n",
-    "    project_root = current_dir.parent.parent.parent  # Ir al directorio raíz del proyecto\n",
-    "    requirements_file = project_root / 'requirements.txt'\n",
-    "    \n",
-    "    if not requirements_file.exists():\n",
-    "        print(\"⚠️ Archivo requirements.txt no encontrado\")\n",
-    "        print(f\"Buscado en: {requirements_file}\")\n",
-    "        return False\n",
-    "    \n",
-    "    print(\"📦 Verificando e instalando dependencias...\")\n",
-    "    print(f\"📁 Archivo requirements: {requirements_file}\")\n",
-    "    \n",
-    "    try:\n",
-    "        # Instalar dependencias\n",
-    "        result = subprocess.run([\n",
-    "            sys.executable, '-m', 'pip', 'install', '-r', str(requirements_file)\n",
-    "        ], capture_output=True, text=True, check=True)\n",
-    "        \n",
-    "        print(\"✅ Dependencias instaladas correctamente\")\n",
-    "        return True\n",
-    "    \n",
-    "    except subprocess.CalledProcessError as e:\n",
-    "        print(\"❌ Error instalando dependencias:\")\n",
-    "        print(f\"Error: {e.stderr}\")\n",
-    "        return False\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(f\"❌ Error inesperado: {e}\")\n",
-    "        return False\n",
-    "\n",
-    "def verify_package(package_name, import_name=None):\n",
-    "    \"\"\"\n",
-    "    Verifica si un paquete está instalado e importable\n",
-    "    \"\"\"\n",
-    "    if import_name is None:\n",
-    "        import_name = package_name\n",
-    "    \n",
-    "    try:\n",
-    "        __import__(import_name)\n",
-    "        return True\n",
-    "    except ImportError:\n",
-    "        return False\n",
-    "\n",
-    "# Ejecutar verificación e instalación\n",
-    "print(\"🔧 CONFIGURACIÓN DEL ENTORNO DE ANÁLISIS DE SCOUTING\")\n",
-    "print(\"=\" * 55)\n",
-    "\n",
-    "# Instalar dependencias\n",
-    "install_success = install_requirements()\n",
-    "\n",
-    "# Verificar paquetes críticos\n",
-    "critical_packages = [\n",
-    "    ('pandas', 'pandas'),\n",
-    "    ('numpy', 'numpy'), \n",
-    "    ('matplotlib', 'matplotlib'),\n",
-    "    ('seaborn', 'seaborn'),\n",
-    "    ('scikit-learn', 'sklearn'),\n",
-    "    ('scipy', 'scipy')\n",
-    "]\n",
-    "\n",
-    "print(\"\\n🔍 Verificando paquetes críticos:\")\n",
-    "all_available = True\n",
-    "for package, import_name in critical_packages:\n",
-    "    available = verify_package(package, import_name)\n",
-    "    status = \"✅\" if available else \"❌\"\n",
-    "    print(f\"{status} {package}\")\n",
-    "    if not available:\n",
-    "        all_available = False\n",
-    "\n",
-    "if all_available:\n",
-    "    print(\"\\n🎉 ¡Todos los paquetes necesarios están disponibles!\")\n",
-    "    print(\"🚀 Listo para análisis avanzado de scouting\")\n",
-    "else:\n",
-    "    print(\"\\n⚠️ Algunos paquetes no están disponibles\")\n",
-    "    print(\"💡 Ejecute: pip install -r requirements.txt\")\n",
-    "\n",
-    "print(\"\\n\" + \"=\" * 55)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2ab0c104",
    "metadata": {},
@@ -151,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "07dffd79",
    "metadata": {},
    "outputs": [
@@ -159,12 +37,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Seaborn disponible - gráficos avanzados habilitados\n",
-      " Scikit-learn disponible - modelos predictivos habilitados\n",
-      "¡Herramientas de análisis avanzado listas!\n",
-      "Pandas: 2.3.1 | NumPy: 2.2.6\n",
-      "Matplotlib: 3.10.3\n",
-      "Seaborn: 0.13.2\n"
+      "✅ Herramientas de análisis listas!\n",
+      "📊 Pandas: 2.3.1 | NumPy: 2.2.6\n",
+      "📈 Matplotlib: 3.10.3 | Seaborn: 0.13.2\n",
+      "🚀 ¡Comenzando análisis de scouting!\n"
      ]
     }
    ],
@@ -173,37 +49,21 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "from datetime import datetime\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "# Configuración básica de matplotlib\n",
+    "# Configuración de visualización\n",
     "plt.rcParams['figure.figsize'] = (12, 8)\n",
     "plt.rcParams['font.size'] = 10\n",
+    "sns.set_theme(style=\"whitegrid\", palette=\"Set2\")\n",
     "\n",
-    "# Intentar importar seaborn si está disponible\n",
-    "try:\n",
-    "    import seaborn as sns\n",
-    "    sns.set_theme(style=\"whitegrid\", palette=\"Set2\")\n",
-    "    SEABORN_AVAILABLE = True\n",
-    "    print(\" Seaborn disponible - gráficos avanzados habilitados\")\n",
-    "except ImportError:\n",
-    "    SEABORN_AVAILABLE = False\n",
-    "    print(\" Seaborn no disponible - usando matplotlib básico\")\n",
-    "\n",
-    "try:\n",
-    "    from sklearn.linear_model import LinearRegression\n",
-    "    SKLEARN_AVAILABLE = True\n",
-    "    print(\" Scikit-learn disponible - modelos predictivos habilitados\")\n",
-    "except ImportError:\n",
-    "    SKLEARN_AVAILABLE = False\n",
-    "    print(\" Scikit-learn no disponible - usando análisis estadístico básico\")\n",
-    "\n",
-    "print(\"¡Herramientas de análisis avanzado listas!\")\n",
-    "print(f\"Pandas: {pd.__version__} | NumPy: {np.__version__}\")\n",
-    "print(f\"Matplotlib: {plt.matplotlib.__version__}\")\n",
-    "if SEABORN_AVAILABLE:\n",
-    "    print(f\"Seaborn: {sns.__version__}\")"
+    "print(\"✅ Herramientas de análisis listas!\")\n",
+    "print(f\"📊 Pandas: {pd.__version__} | NumPy: {np.__version__}\")\n",
+    "print(f\"📈 Matplotlib: {plt.matplotlib.__version__} | Seaborn: {sns.__version__}\")\n",
+    "print(\"🚀 ¡Comenzando análisis de scouting!\")"
    ]
   },
   {
@@ -612,22 +472,15 @@
    "outputs": [],
    "source": [
     "# Dashboard principal de análisis de scouting\n",
-    "print(\" CREANDO DASHBOARD DE ANÁLISIS DE SCOUTING\")\n",
+    "print(\"📊 CREANDO DASHBOARD DE ANÁLISIS DE SCOUTING\")\n",
     "print(\"=\" * 50)\n",
     "\n",
     "# Configurar el dashboard principal\n",
     "fig, axes = plt.subplots(2, 2, figsize=(18, 12))\n",
     "fig.suptitle('Dashboard de Scouting - Liga Juvenil MX', fontsize=20, fontweight='bold')\n",
     "\n",
-    "# Gráfico 1: Distribución de goles por posición (con/sin seaborn)\n",
-    "if SEABORN_AVAILABLE:\n",
-    "    sns.boxplot(data=df_jugadores, x='posicion', y='goles', ax=axes[0,0], palette='Set2')\n",
-    "else:\n",
-    "    # Fallback con matplotlib\n",
-    "    posiciones = df_jugadores['posicion'].unique()\n",
-    "    goles_por_pos = [df_jugadores[df_jugadores['posicion'] == pos]['goles'] for pos in posiciones]\n",
-    "    axes[0,0].boxplot(goles_por_pos, labels=posiciones)\n",
-    "\n",
+    "# Gráfico 1: Distribución de goles por posición\n",
+    "sns.boxplot(data=df_jugadores, x='posicion', y='goles', ax=axes[0,0], palette='Set2')\n",
     "axes[0,0].set_title('Distribución de Goles por Posición', fontsize=14, fontweight='bold')\n",
     "axes[0,0].set_xlabel('Posición', fontsize=12)\n",
     "axes[0,0].set_ylabel('Goles Totales', fontsize=12)\n",
@@ -641,22 +494,9 @@
     "    axes[0,0].text(i+1, media + 1, f'μ={media:.1f}', ha='center', va='bottom', fontweight='bold')\n",
     "\n",
     "# Gráfico 2: Relación edad vs valor de mercado\n",
-    "if SEABORN_AVAILABLE:\n",
-    "    scatter = sns.scatterplot(data=df_jugadores, x='edad', y='valor_mercado_estimado', \n",
-    "                             hue='posicion', size='contribucion_ofensiva', \n",
-    "                             sizes=(50, 200), alpha=0.7, ax=axes[0,1])\n",
-    "else:\n",
-    "    # Fallback con matplotlib - colores por posición\n",
-    "    posiciones = df_jugadores['posicion'].unique()\n",
-    "    colors = ['red', 'blue', 'green', 'orange', 'purple', 'brown']\n",
-    "    \n",
-    "    for i, pos in enumerate(posiciones):\n",
-    "        data_pos = df_jugadores[df_jugadores['posicion'] == pos]\n",
-    "        axes[0,1].scatter(data_pos['edad'], data_pos['valor_mercado_estimado'], \n",
-    "                         c=colors[i % len(colors)], alpha=0.7, label=pos,\n",
-    "                         s=data_pos['contribucion_ofensiva']*5)\n",
-    "    axes[0,1].legend()\n",
-    "\n",
+    "scatter = sns.scatterplot(data=df_jugadores, x='edad', y='valor_mercado_estimado', \n",
+    "                         hue='posicion', size='contribucion_ofensiva', \n",
+    "                         sizes=(50, 200), alpha=0.7, ax=axes[0,1])\n",
     "axes[0,1].set_title('Edad vs Valor de Mercado', fontsize=14, fontweight='bold')\n",
     "axes[0,1].set_xlabel('Edad (años)', fontsize=12)\n",
     "axes[0,1].set_ylabel('Valor de Mercado (USD)', fontsize=12)\n",
@@ -665,48 +505,22 @@
     "# Formatear eje Y con formato de moneda\n",
     "axes[0,1].yaxis.set_major_formatter(plt.FuncFormatter(lambda x, p: f'${x/1000:.0f}K'))\n",
     "\n",
-    "# Gráfico 3: Heatmap de correlaciones (con/sin seaborn)\n",
+    "# Gráfico 3: Heatmap de correlaciones\n",
     "vars_correlacion = ['goles_por_partido', 'asistencias_por_partido', 'precision_pases', \n",
     "                   'contribucion_ofensiva', 'valor_mercado_estimado', 'edad', 'indice_disciplina']\n",
     "correlation_subset = df_jugadores[vars_correlacion].corr()\n",
     "\n",
-    "if SEABORN_AVAILABLE:\n",
-    "    sns.heatmap(correlation_subset, annot=True, cmap='RdBu_r', center=0, \n",
-    "                square=True, linewidths=0.5, ax=axes[1,0],\n",
-    "                cbar_kws={\"shrink\": .8})\n",
-    "else:\n",
-    "    # Fallback con matplotlib\n",
-    "    im = axes[1,0].imshow(correlation_subset.values, cmap='RdBu_r', vmin=-1, vmax=1)\n",
-    "    axes[1,0].set_xticks(range(len(correlation_subset.columns)))\n",
-    "    axes[1,0].set_yticks(range(len(correlation_subset.columns)))\n",
-    "    axes[1,0].set_xticklabels([col[:12] + '...' if len(col) > 15 else col for col in correlation_subset.columns])\n",
-    "    axes[1,0].set_yticklabels([col[:12] + '...' if len(col) > 15 else col for col in correlation_subset.columns])\n",
-    "    \n",
-    "    # Añadir valores de correlación\n",
-    "    for i in range(len(correlation_subset.columns)):\n",
-    "        for j in range(len(correlation_subset.columns)):\n",
-    "            text = axes[1,0].text(j, i, f'{correlation_subset.iloc[i, j]:.2f}',\n",
-    "                                 ha=\"center\", va=\"center\", color=\"black\", fontsize=8)\n",
-    "    \n",
-    "    plt.colorbar(im, ax=axes[1,0], shrink=0.8)\n",
-    "\n",
+    "sns.heatmap(correlation_subset, annot=True, cmap='RdBu_r', center=0, \n",
+    "            square=True, linewidths=0.5, ax=axes[1,0],\n",
+    "            cbar_kws={\"shrink\": .8})\n",
     "axes[1,0].set_title('Matriz de Correlaciones - Métricas Clave', fontsize=14, fontweight='bold')\n",
     "axes[1,0].tick_params(axis='x', rotation=45)\n",
     "axes[1,0].tick_params(axis='y', rotation=0)\n",
     "\n",
     "# Gráfico 4: Top 10 jugadores por contribución ofensiva\n",
     "top_contribucion = df_jugadores.nlargest(10, 'contribucion_ofensiva')\n",
-    "\n",
-    "if SEABORN_AVAILABLE:\n",
-    "    sns.barplot(data=top_contribucion, y='nombre', x='contribucion_ofensiva', \n",
-    "                palette='viridis', ax=axes[1,1])\n",
-    "else:\n",
-    "    # Fallback con matplotlib\n",
-    "    y_pos = range(len(top_contribucion))\n",
-    "    axes[1,1].barh(y_pos, top_contribucion['contribucion_ofensiva'], color='skyblue')\n",
-    "    axes[1,1].set_yticks(y_pos)\n",
-    "    axes[1,1].set_yticklabels(top_contribucion['nombre'])\n",
-    "\n",
+    "sns.barplot(data=top_contribucion, y='nombre', x='contribucion_ofensiva', \n",
+    "            palette='viridis', ax=axes[1,1])\n",
     "axes[1,1].set_title('Top 10 - Contribución Ofensiva', fontsize=14, fontweight='bold')\n",
     "axes[1,1].set_xlabel('Contribución Ofensiva (Goles + 0.7×Asistencias)', fontsize=12)\n",
     "axes[1,1].set_ylabel('')\n",
@@ -719,8 +533,8 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "print(\"\\n Dashboard principal generado\")\n",
-    "print(\" Muestra distribuciones, correlaciones y rankings clave para scouting\")"
+    "print(\"\\n✅ Dashboard principal generado\")\n",
+    "print(\"📈 Muestra distribuciones, correlaciones y rankings clave para scouting\")"
    ]
   },
   {
