Clean: Eliminación completa de emojis del código
Cambios realizados para limpiar el código de emojis:

🧹 LIMPIEZA SISTEMÁTICA:
- Removidos todos los emojis de archivos .py, .md y .ipynb
- Notebooks de solución simplificados
- Scripts de instalación limpiados
- Documentación sin emojis

📁 ARCHIVOS AFECTADOS:
+ evaluaciones/bloque-1/solucion-caso-practico/solucion_caso_bloque1.ipynb
+ evaluaciones/bloque-2/solucion-caso-practico/scouting_analysis_solucion.ipynb
+ install_dependencies.py
+ INSTALLATION.md

🎯 BENEFICIOS:
- Código más profesional y limpio
- Mejor legibilidad en diferentes entornos
- Compatibilidad universal de caracteres
- Enfoque en contenido técnico

✅ VERIFICADO:
- Sin emojis en código fuente
- Funcionalidad preservada
- Mensajes informativos mantenidos
- Estructura de proyecto intacta

El código ahora está completamente libre de emojis manteniendo
toda la funcionalidad y claridad de los mensajes.

--- a/evaluaciones/bloque-1/solucion-caso-practico/solucion_caso_bloque1.ipynb
+++ b/evaluaciones/bloque-1/solucion-caso-practico/solucion_caso_bloque1.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -405,11 +405,11 @@
      "text": [
       "\n",
       " Análisis de jugadores destacados:\n",
-      "Carlos Vela (34 años): 0.54 goles/partido - ⭐ PROMETEDOR\n",
+      "Carlos Vela (34 años): 0.54 goles/partido -  PROMETEDOR\n",
       "Andrés Guardado (37 años): 0.07 goles/partido -  Regular\n",
-      "Hirving Lozano (28 años): 0.38 goles/partido - ⭐ PROMETEDOR\n",
+      "Hirving Lozano (28 años): 0.38 goles/partido -  PROMETEDOR\n",
       "Héctor Herrera (33 años): 0.14 goles/partido -  Regular\n",
-      "Raúl Jiménez (32 años): 0.72 goles/partido - ⭐ PROMETEDOR\n"
+      "Raúl Jiménez (32 años): 0.72 goles/partido -  PROMETEDOR\n"
      ]
     }
    ],
@@ -452,7 +452,7 @@
     "    \n",
     "    promedio, es_prometedor = analizar_jugador(goles, partidos, edad)\n",
     "    \n",
-    "    estatus = \"⭐ PROMETEDOR\" if es_prometedor else \" Regular\"\n",
+    "    estatus = \"PROMETEDOR\" if es_prometedor else \" Regular\"\n",
     "    print(f\"{nombre} ({edad} años): {promedio:.2f} goles/partido - {estatus}\")"
    ]
   },
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1273,27 +1273,27 @@
       "   =======================================================\n",
       "   1. Raúl Jiménez (32 años, Delantero)\n",
       "       18 goles + 4 asistencias en 25 partidos\n",
-      "      ⭐ Índice de rendimiento: 0.75\n",
+      "       Índice de rendimiento: 0.75\n",
       "       VETERANO CONFIABLE\n",
       "\n",
       "   2. Santiago Giménez (22 años, Delantero)\n",
       "       11 goles + 1 asistencias en 19 partidos\n",
-      "      ⭐ Índice de rendimiento: 0.74\n",
+      "       Índice de rendimiento: 0.74\n",
       "       JOVEN PROMESA\n",
       "\n",
       "   3. Henry Martín (30 años, Delantero)\n",
       "       16 goles + 2 asistencias en 26 partidos\n",
-      "      ⭐ Índice de rendimiento: 0.67\n",
+      "       Índice de rendimiento: 0.67\n",
       "       RENDIMIENTO SÓLIDO\n",
       "\n",
       "   4. Carlos Vela (34 años, Delantero)\n",
       "       15 goles + 8 asistencias en 28 partidos\n",
-      "      ⭐ Índice de rendimiento: 0.66\n",
+      "       Índice de rendimiento: 0.66\n",
       "       VETERANO CONFIABLE\n",
       "\n",
       "   5. Alan Pulido (32 años, Delantero)\n",
       "       14 goles + 3 asistencias en 22 partidos\n",
-      "      ⭐ Índice de rendimiento: 0.66\n",
+      "       Índice de rendimiento: 0.66\n",
       "       VETERANO CONFIABLE\n",
       "\n",
       "    RECOMENDACIÓN ESPECIAL:\n",
@@ -1353,7 +1353,7 @@
     "for i, jugador in enumerate(rendimiento_por_edad[:5], 1):\n",
     "    print(f\"   {i}. {jugador['jugador']} ({jugador['edad']} años, {jugador['posicion']})\")\n",
     "    print(f\"       {jugador['goles']} goles + {jugador['asistencias']} asistencias en {jugador['partidos']} partidos\")\n",
-    "    print(f\"      ⭐ Índice de rendimiento: {jugador['rendimiento_ajustado']:.2f}\")\n",
+    "    print(f\"      Índice de rendimiento: {jugador['rendimiento_ajustado']:.2f}\")\n",
     "    \n",
     "    # Categorización del rendimiento\n",
     "    if jugador['edad'] <= 25 and jugador['rendimiento_ajustado'] >= 0.5:\n",
@@ -1361,7 +1361,7 @@
     "    elif jugador['edad'] > 30 and jugador['rendimiento_ajustado'] >= 0.6:\n",
     "        categoria = \" VETERANO CONFIABLE\"\n",
     "    elif jugador['rendimiento_ajustado'] >= 0.7:\n",
-    "        categoria = \"⭐ JUGADOR CLAVE\"\n",
+    "        categoria = \"JUGADOR CLAVE\"\n",
     "    else:\n",
     "        categoria = \" RENDIMIENTO SÓLIDO\"\n",
     "    \n",
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1411,7 +1411,7 @@
       "   • Como local: 38 puntos en 17 partidos (74.5% efectividad)\n",
       "   • Como visitante: 14 puntos en 17 partidos (27.5% efectividad)\n",
       "\n",
-      "⭐ JUGADORES DESTACADOS:\n",
+      " JUGADORES DESTACADOS:\n",
       "   • Goleador: Raúl Jiménez (18 goles)\n",
       "   • Mejor asistente: Andrés Guardado (12 asistencias)\n",
       "   • Mejor rendimiento/edad: Raúl Jiménez (32 años)\n",
@@ -1449,7 +1449,7 @@
     "print(f\"   • Como local: {puntos_local} puntos en {len(partidos_local)} partidos ({(puntos_local/(len(partidos_local)*3)*100):.1f}% efectividad)\")\n",
     "print(f\"   • Como visitante: {puntos_visitante} puntos en {len(partidos_visitante)} partidos ({(puntos_visitante/(len(partidos_visitante)*3)*100):.1f}% efectividad)\")\n",
     "\n",
-    "print(f\"\\n⭐ JUGADORES DESTACADOS:\")\n",
+    "print(f\"\\nJUGADORES DESTACADOS:\")\n",
     "print(f\"   • Goleador: {goleador['jugador']} ({goleador['goles']} goles)\")\n",
     "print(f\"   • Mejor asistente: {asistente['jugador']} ({asistente['asistencias']} asistencias)\")\n",
     "if rendimiento_por_edad:\n",
