feat(semana-9): Adaptar visualización de datos con método socrático
Transformaciones principales:
- Introducción: de conceptos básicos a preguntas sobre percepción visual vs numérica
- Teoría de visualización: de explicaciones a descubrimiento de 'super poderes' gráficos
- Configuración: de setup técnico a montaje de estudio de diseño visual deportivo
- Primeros gráficos: de ejemplos a investigación visual de mitos deportivos
- Análisis multidimensional: de gráficos simples a laboratorio visual investigativo
- Comunicación final: de resumen a reflexión sobre evolución como visualizador

Metodología socrática aplicada:
✓ Preguntas sobre velocidad de procesamiento visual vs numérico
✓ Reflexiones sobre diferencia entre gráficos que informan vs persuaden
✓ Desarrollo de criterios para selección estratégica de tipos de gráficos
✓ Comparación entre evidencia numérica y visual para toma de decisiones
✓ Autoevaluación de transformación en comunicador visual
✓ Conexiones con visualización en medios deportivos profesionales

Contexto educativo:
- Transición de análisis estadístico a comunicación visual efectiva
- Desarrollo de pensamiento sobre diseño de información
- Preparación para presentación de insights deportivos
- Fundamentos de storytelling visual con datos

Elementos pedagógicos innovadores:
- Analogías con estudios de diseño y laboratorios visuales
- Preguntas sobre confianza en evidencia visual vs numérica
- Reflexiones sobre impacto de estética en credibilidad analítica
- Desarrollo de intuición sobre cuándo usar diferentes tipos de gráficos

El contenido promueve evolución de analista de datos
a comunicador visual capaz de crear narrativas persuasivas.

--- a/contenido/bloque-2/semana-9/visualizacion-datos.ipynb
+++ b/contenido/bloque-2/semana-9/visualizacion-datos.ipynb
@@ -5,20 +5,24 @@
    "id": "c1627a89",
    "metadata": {},
    "source": [
-    "# **Semana 9: Gráficos Básicos de Fútbol**\n",
+    "# **Semana 9: ¿Cómo hacer que los datos deportivos \"salten\" de la pantalla?**\n",
     "\n",
     "## Bloque 2: Explorando Datos Deportivos con Python\n",
     "\n",
     "---\n",
     "\n",
-    "**Lo que aprenderemos hoy:**\n",
-    "- Crear gráficos de barras para comparar equipos\n",
-    "- Hacer histogramas para ver distribuciones de goles\n",
-    "- Usar boxplots para análisis estadístico visual\n",
-    "- Personalizar colores y títulos en seaborn\n",
+    "### Pregunta perceptual: ¿Por qué una imagen deportiva vale más que mil estadísticas?\n",
     "\n",
-    "**¿Por qué es interesante?**\n",
-    "¡Una imagen vale más que mil números! Aprenderemos a convertir datos en gráficos que cuenten historias del fútbol.\n",
+    "**Reflexión visual**: ¿Has notado cómo los gráficos en transmisiones deportivas te hacen entender instantáneamente lo que tomaría minutos explicar con palabras?\n",
+    "\n",
+    "**Tu hipótesis**: ¿Crees que tu cerebro está \"programado\" para procesar información visual más rápido que numérica?\n",
+    "\n",
+    "### Lo que descubriremos como artistas de datos deportivos:\n",
+    "- ¿Cuándo diferentes tipos de gráficos revelan historias únicas?\n",
+    "- ¿Cómo la personalización visual puede amplificar el impacto de tus insights?\n",
+    "- ¿Qué diferencia hay entre gráficos que \"informan\" vs gráficos que \"persuaden\"?\n",
+    "\n",
+    "**Pregunta transformadora**: Si tuvieras que convencer a un director deportivo de fichar a un jugador usando solo visualizaciones, ¿qué gráficos crearías?\n",
     "\n",
     "---"
    ]
@@ -28,49 +32,40 @@
    "id": "657a2f37",
    "metadata": {},
    "source": [
-    "## 1. ¿Por qué Hacer Gráficos?\n",
+    "## 1. Descubrimiento: ¿Por qué tu cerebro prefiere gráficos a tablas?\n",
     "\n",
-    "### 1.1 Los Gráficos son Mejores que las Tablas\n",
+    "### 1.1 La revolución perceptual de la visualización\n",
     "\n",
-    "**Es más fácil ver patrones en gráficos que en números**\n",
+    "**Pregunta cognitiva**: ¿Qué sucede en tu mente cuando ves números vs cuando ves formas y colores?\n",
     "\n",
-    "Imagina que tienes estos datos:\n",
+    "**Experimento mental**: Tienes estos rendimientos goleadores:\n",
     "- Equipo A: 25 goles\n",
     "- Equipo B: 18 goles  \n",
     "- Equipo C: 30 goles\n",
     "\n",
-    "¿Qué es más fácil de entender?\n",
+    "**Desafío de velocidad**: ¿Cuántos segundos necesitas para identificar al mejor equipo en una tabla vs en un gráfico de barras?\n",
     "\n",
-    "**Una tabla con números** (aburrida)\n",
-    "```\n",
-    "Equipo | Goles\n",
-    "A      | 25\n",
-    "B      | 18  \n",
-    "C      | 30\n",
-    "```\n",
+    "### 1.2 ¿Para qué \"super poderes\" nos entrenan los gráficos deportivos?\n",
     "\n",
-    "**Un gráfico** (¡se ve inmediatamente que C es el mejor!)\n",
+    "**Reflexión estratégica**: ¿Cómo los gráficos pueden transformar tu capacidad de análisis deportivo?\n",
     "\n",
-    "### 1.2 ¿Para qué Sirven los Gráficos en Fútbol?\n",
+    "- **Detección de patrones**: ¿Puedes \"ver\" tendencias que los números ocultan?\n",
+    "- **Comparación instantánea**: ¿Qué tan rápido puedes evaluar múltiples opciones?\n",
+    "- **Comunicación persuasiva**: ¿Cómo convencer a otros con evidencia visual?\n",
+    "- **Toma de decisiones**: ¿Los insights visuales mejoran la calidad de tus elecciones?\n",
     "\n",
-    "- **Ver quién es mejor**: ¿Qué equipo anota más?\n",
-    "- **Encontrar patrones**: ¿Los equipos locales ganan más?\n",
-    "- **Tomar decisiones**: ¿En qué jugador invertir?\n",
-    "- **Comparar fácilmente**: Varios equipos a la vez\n",
+    "### 1.3 El arsenal gráfico del analista deportivo\n",
     "\n",
-    "### 1.3 Tipos de Gráficos Simples\n",
+    "#### **Gráfico de Barras - Tu comparador instantáneo**\n",
+    "**Pregunta de aplicación**: ¿Cuándo necesitas mostrar \"quién es mejor\" de manera irrefutable?\n",
     "\n",
-    "#### **Gráfico de Barras**\n",
-    "- Para comparar categorías\n",
-    "- Ejemplo: Goles por equipo\n",
+    "#### **Gráfico de Líneas - Tu detector de tendencias**  \n",
+    "**Reflexión temporal**: ¿Cómo visualizarías si un jugador está \"en racha\" o \"en declive\"?\n",
     "\n",
-    "#### **Gráfico de Líneas**  \n",
-    "- Para ver cambios en el tiempo\n",
-    "- Ejemplo: Goles por mes\n",
+    "#### **Gráfico de Dispersión - Tu revelador de relaciones**\n",
+    "**Hipótesis investigativa**: ¿Crees que puedes descubrir correlaciones ocultas entre variables deportivas?\n",
     "\n",
-    "#### **Gráfico de Puntos**\n",
-    "- Para ver relaciones\n",
-    "- Ejemplo: ¿Más tiros = más goles?"
+    "**Pregunta integradora**: ¿Cuál es la diferencia entre elegir un gráfico por estética vs elegirlo por efectividad analítica?"
    ]
   },
   {
@@ -78,26 +73,33 @@
    "id": "df2f8736",
    "metadata": {},
    "source": [
-    "## 2. Configuración Simple\n",
+    "## 2. Montando tu estudio de diseño visual deportivo\n",
     "\n",
-    "### 2.1 Librerías que Necesitamos\n",
+    "### 2.1 ¿Qué herramientas usan los \"artistas de datos\" profesionales?\n",
     "\n",
-    "Vamos a usar principalmente **seaborn** porque hace gráficos bonitos automáticamente:\n",
+    "**Pregunta estratégica**: ¿Cómo los analistas deportivos profesionales crean visualizaciones que aparecen en televisión mundial?\n",
     "\n",
-    "- **Pandas**: Para manejar datos\n",
-    "- **Seaborn**: Para gráficos bonitos\n",
-    "- **Matplotlib**: Para mostrar los gráficos\n",
-    "- **NumPy**: Para crear datos de ejemplo\n",
+    "**Tu arsenal creativo**:\n",
+    "- **Pandas**: ¿Tu organizador de información compleja?\n",
+    "- **Seaborn**: ¿Tu director artístico automático?\n",
+    "- **Matplotlib**: ¿Tu lienzo infinito de posibilidades?\n",
+    "- **NumPy**: ¿Tu generador de escenarios realistas?\n",
     "\n",
-    "### ¿Por qué Seaborn?\n",
-    "- Gráficos bonitos sin esfuerzo\n",
-    "- Perfecto para análisis de deportes\n",
-    "- Menos código = más tiempo para analizar"
+    "### Reflexión sobre Seaborn: ¿Tu ventaja competitiva?\n",
+    "\n",
+    "**Pregunta de eficiencia**: ¿Qué valorarías más: control total sobre cada píxel o resultados profesionales con mínimo esfuerzo?\n",
+    "\n",
+    "**Las capacidades revolucionarias**:\n",
+    "- **Estética automática**: ¿Gráficos de nivel ESPN sin ser diseñador?\n",
+    "- **Integración estadística**: ¿Visualizaciones que \"entienden\" tus datos deportivos?\n",
+    "- **Escalabilidad**: ¿De prototipos rápidos a presentaciones ejecutivas?\n",
+    "\n",
+    "**Pregunta anticipatoria**: ¿Crees que estas herramientas cambiarán tu velocidad de descubrimiento de insights deportivos?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2b719789",
    "metadata": {},
    "outputs": [
@@ -115,23 +117,30 @@
     }
    ],
    "source": [
-    "# Importar librerías para gráficos\n",
+    "# ¿Cómo \"activamos\" tu estudio de producción visual deportiva?\n",
+    "# Preparemos tu suite de herramientas creativas:\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
+    "warnings.filterwarnings('ignore')  # Enfoque en creatividad, no en advertencias técnicas\n",
     "\n",
-    "# Configuración simple con seaborn\n",
+    "# Pregunta: ¿Qué transformación visual esperarías con esta configuración profesional?\n",
     "sns.set_theme(style=\"whitegrid\", palette=\"Set2\")\n",
     "plt.rcParams['figure.figsize'] = (10, 6)\n",
     "\n",
-    "print(\"Librerías listas para gráficos\")\n",
-    "print(\"Pandas: Para datos\")\n",
-    "print(\"Seaborn: Para gráficos bonitos\")\n",
-    "print(\"Matplotlib: Para mostrar gráficos\")\n",
-    "print(\"\\n¡Todo listo para hacer gráficos de fútbol!\")"
+    "print(\"Tu estudio de visualización deportiva está operativo!\")\n",
+    "print(\"Pandas: Tu curador de datos complejos\")\n",
+    "print(\"Seaborn: Tu director artístico con inteligencia estadística\")\n",
+    "print(\"Matplotlib: Tu lienzo ilimitado para creatividad visual\")\n",
+    "print(\"NumPy: Tu simulador de realidades deportivas\")\n",
+    "\n",
+    "print(\"\\n¡Preparado para convertir datos en narrativas visuales impactantes!\")\n",
+    "\n",
+    "# Reflexión: ¿Cómo crees que estas herramientas integradas potenciarán tu capacidad \n",
+    "# de crear visualizaciones que no solo informen, sino que inspiren acción?"
    ]
   },
   {
@@ -257,13 +266,17 @@
    "id": "324b8cbd",
    "metadata": {},
    "source": [
-    "## 4. Nuestros Primeros Gráficos\n",
+    "## 4. Tu primera investigación visual: ¿Desentrañando mitos deportivos?\n",
     "\n",
-    "### 4.1 ¿Los Equipos Locales Ganan Más?\n",
+    "### 4.1 El misterio de la ventaja local: ¿Realidad o leyenda?\n",
     "\n",
-    "Una pregunta interesante: **¿Es mejor jugar en casa?**\n",
+    "**Pregunta investigativa**: ¿Cómo usarías visualizaciones para resolver una de las preguntas más antiguas del deporte?\n",
     "\n",
-    "Vamos a hacer gráficos para descubrirlo."
+    "**Tu hipótesis**: ¿Crees que los datos revelarán una ventaja estadísticamente significativa para los equipos locales?\n",
+    "\n",
+    "**Desafío metodológico**: ¿Qué tipos de gráficos serían más convincentes para demostrar (o refutar) la ventaja local?\n",
+    "\n",
+    "**Reflexión anticipatoria**: ¿Confiarías más en números simples o en evidencia visual para formar tu opinión?"
    ]
   },
   {
@@ -304,11 +317,13 @@
     }
    ],
    "source": [
-    "# Hacer gráficos simples para comparar Local vs Visitante\n",
-    "print(\"ANÁLISIS: ¿GANAN MÁS LOS LOCALES?\")\n",
-    "print(\"=\" * 40)\n",
+    "# ¿Cómo crear un \"laboratorio visual\" para investigar la ventaja local?\n",
+    "# Construyamos un análisis multidimensional:\n",
     "\n",
-    "# Preparar datos para comparar\n",
+    "print(\"INVESTIGACIÓN VISUAL: ¿EXISTE LA VENTAJA LOCAL?\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "# Pregunta metodológica: ¿Por qué reestructurar los datos de esta manera?\n",
     "datos_comparacion = []\n",
     "for _, row in df_partidos.iterrows():\n",
     "    datos_comparacion.append({'Tipo': 'Local', 'Goles': row['Goles_Local']})\n",
@@ -316,25 +331,27 @@
     "\n",
     "df_comparacion = pd.DataFrame(datos_comparacion)\n",
     "\n",
-    "# Crear gráficos con seaborn (súper fácil!)\n",
+    "# Tu \"dashboard\" investigativo: múltiples perspectivas visuales\n",
     "fig, axes = plt.subplots(2, 2, figsize=(12, 8))\n",
-    "fig.suptitle('LOCAL vs VISITANTE', fontsize=16, fontweight='bold')\n",
+    "fig.suptitle('INVESTIGACIÓN: LOCAL vs VISITANTE', fontsize=16, fontweight='bold')\n",
     "\n",
-    "# Gráfico 1: Goles promedio\n",
+    "# Perspectiva 1: ¿Diferencias en promedio de goles?\n",
     "sns.barplot(data=df_comparacion, x='Tipo', y='Goles', ax=axes[0, 0])\n",
-    "axes[0, 0].set_title('Goles Promedio por Partido')\n",
+    "axes[0, 0].set_title('¿Quién anota más goles?')\n",
+    "axes[0, 0].set_ylabel('Goles promedio')\n",
     "\n",
-    "# Gráfico 2: ¿Quién gana más?\n",
+    "# Perspectiva 2: ¿Distribución de resultados?\n",
     "resultados = df_partidos['Resultado'].value_counts()\n",
     "axes[0, 1].pie(resultados.values, labels=resultados.index, autopct='%1.1f%%')\n",
-    "axes[0, 1].set_title('¿Quién Gana Más?')\n",
+    "axes[0, 1].set_title('¿Quién gana más frecuentemente?')\n",
     "\n",
-    "# Gráfico 3: Posesión\n",
-    "sns.barplot(data=df_partidos, x=['Local']*len(df_partidos), y='Posesion_Local', ax=axes[1, 0])\n",
-    "axes[1, 0].set_title('Posesión Promedio Local')\n",
-    "axes[1, 0].set_xlabel('Equipo Local')\n",
+    "# Perspectiva 3: ¿Control del juego (posesión)?\n",
+    "posesion_promedio = df_partidos['Posesion_Local'].mean()\n",
+    "axes[1, 0].bar(['Local'], [posesion_promedio], color='skyblue')\n",
+    "axes[1, 0].set_title('¿Control del juego local?')\n",
+    "axes[1, 0].set_ylabel('Posesión promedio (%)')\n",
     "\n",
-    "# Gráfico 4: Tiros\n",
+    "# Perspectiva 4: ¿Agresividad ofensiva (tiros)?\n",
     "datos_tiros = []\n",
     "for _, row in df_partidos.iterrows():\n",
     "    datos_tiros.append({'Tipo': 'Local', 'Tiros': row['Tiros_Local']})\n",
@@ -342,23 +359,32 @@
     "\n",
     "df_tiros = pd.DataFrame(datos_tiros)\n",
     "sns.barplot(data=df_tiros, x='Tipo', y='Tiros', ax=axes[1, 1])\n",
-    "axes[1, 1].set_title('Tiros Promedio')\n",
+    "axes[1, 1].set_title('¿Quién ataca más?')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Mostrar números simples\n",
-    "print(\"\\nRESUMEN DE NÚMEROS:\")\n",
+    "# El veredicto numérico de tu investigación:\n",
+    "print(\"\\nEVIDENCIA NUMÉRICA:\")\n",
     "goles_local_promedio = df_partidos['Goles_Local'].mean()\n",
     "goles_visitante_promedio = df_partidos['Goles_Visitante'].mean()\n",
+    "diferencia = goles_local_promedio - goles_visitante_promedio\n",
     "\n",
-    "print(f\"Goles promedio local: {goles_local_promedio:.1f}\")\n",
-    "print(f\"Goles promedio visitante: {goles_visitante_promedio:.1f}\")\n",
+    "print(f\"Goles promedio local: {goles_local_promedio:.2f}\")\n",
+    "print(f\"Goles promedio visitante: {goles_visitante_promedio:.2f}\")\n",
+    "print(f\"Diferencia: {diferencia:.2f} goles\")\n",
     "\n",
-    "if goles_local_promedio > goles_visitante_promedio:\n",
-    "    print(\"\\n¡SÍ! Los equipos locales anotan más goles\")\n",
+    "# Tu conclusión como investigador:\n",
+    "if abs(diferencia) > 0.1:\n",
+    "    ventaja = \"local\" if diferencia > 0 else \"visitante\"\n",
+    "    print(f\"\\n¡HALLAZGO! Existe una ligera ventaja {ventaja}\")\n",
     "else:\n",
-    "    print(\"\\nNo hay mucha diferencia\")"
+    "    print(\"\\nCONCLUSIÓN: La ventaja es mínima o inexistente\")\n",
+    "\n",
+    "print(\"\\nPreguntas para reflexionar:\")\n",
+    "print(\"¿Los gráficos te convencen más que los números solos?\")\n",
+    "print(\"¿Qué perspectiva visual fue más reveladora?\")\n",
+    "print(\"¿Confiarías en estos resultados para tomar decisiones estratégicas?\")"
    ]
   },
   {
@@ -696,55 +722,66 @@
    "source": [
     "---\n",
     "\n",
-    "## ¡Felicitaciones!\n",
+    "## Reflexiones sobre tu evolución como visualizador de datos deportivos\n",
     "\n",
-    "### Lo que Lograste Hoy\n",
+    "### Autoevaluación: ¿Cómo transformaste tu relación con la información deportiva?\n",
     "\n",
-    "**¡Aprendiste a hacer gráficos profesionales!**\n",
+    "**Pregunta de síntesis**: ¿Qué diferencia encuentras entre \"tener datos\" y \"comunicar insights\" efectivamente?\n",
     "\n",
-    "**Entiendes por qué los gráficos son útiles**  \n",
-    "**Sabes usar seaborn para hacer gráficos bonitos**  \n",
-    "**Puedes comparar datos con gráficos de barras**  \n",
-    "**Sabes hacer gráficos de línea para mostrar tiempo**  \n",
-    "**Puedes usar gráficos de puntos para ver relaciones**  \n",
-    "**Entiendes cómo los gráficos cuentan historias**  \n",
+    "#### Tu nueva identidad como comunicador visual\n",
     "\n",
-    "### Fórmula del Éxito con Seaborn\n",
+    "**Traducción instantánea**: ¿Comprendes cómo convertir números complejos en narrativas visuales claras?\n",
+    "\n",
+    "**Investigación multidimensional**: ¿Puedes usar múltiples tipos de gráficos para examinar un problema desde diferentes ángulos?\n",
+    "\n",
+    "**Comunicación persuasiva**: ¿Entiendes cómo la elección del gráfico afecta la interpretación del mensaje?\n",
+    "\n",
+    "**Eficiencia profesional**: ¿Aprecias el poder de herramientas como Seaborn para crear visualizaciones de nivel profesional?\n",
+    "\n",
+    "### Reflexión metodológica: ¿Qué aprendiste sobre el proceso de investigación visual?\n",
+    "\n",
+    "**Tu experiencia**: ¿Qué fue más revelador: crear los gráficos o interpretar lo que revelan?\n",
+    "\n",
+    "#### Insights sobre herramientas y técnicas:\n",
+    "- **Seaborn**: ¿Tu acelerador de productividad visual?\n",
+    "- **Múltiples perspectivas**: ¿El valor de examinar datos desde diferentes ángulos gráficos?\n",
+    "- **Estética profesional**: ¿Cómo la presentación visual afecta la credibilidad de tus análisis?\n",
+    "\n",
+    "### Conexiones con el análisis deportivo profesional\n",
+    "\n",
+    "**Pregunta integradora**: ¿Cómo crees que las visualizaciones que aprendiste a crear se comparan con las que ves en medios deportivos profesionales?\n",
+    "\n",
+    "**Tu perspectiva evolucionada**: ¿Puedes ahora \"decodificar\" las intenciones detrás de los gráficos que ves en televisión deportiva?\n",
+    "\n",
+    "### Preparación para comunicación avanzada\n",
+    "\n",
+    "**Anticipación**: ¿Qué tipos de historias deportivas más complejas te gustaría contar con visualizaciones?\n",
+    "\n",
+    "**Tu próximo nivel**: ¿Cómo combinarías múltiples datasets para crear narrativas visuales más ricas?\n",
+    "\n",
+    "### Tu arsenal de comunicación visual\n",
     "\n",
     "```python\n",
-    "# Solo necesitas recordar esto:\n",
+    "# Tu fórmula del éxito:\n",
     "import seaborn as sns\n",
     "sns.set_theme()\n",
     "\n",
-    "# ¡Y usar sns. para todo!\n",
-    "sns.barplot(...)    # Para comparar\n",
-    "sns.lineplot(...)   # Para tiempo  \n",
-    "sns.scatterplot(...) # Para relaciones\n",
-    "sns.histplot(...)   # Para distribuciones\n",
+    "# Tu kit de herramientas narrativas:\n",
+    "sns.barplot(...)      # Para comparaciones decisivas\n",
+    "sns.lineplot(...)     # Para revelar tendencias temporales  \n",
+    "sns.scatterplot(...)  # Para descubrir relaciones ocultas\n",
+    "sns.boxplot(...)      # Para análisis de distribuciones\n",
     "```\n",
     "\n",
-    "### Secreto Pro\n",
+    "### Logro desbloqueado\n",
     "\n",
-    "**Seaborn > Matplotlib** para principiantes porque:\n",
-    "- Hace gráficos bonitos automáticamente\n",
-    "- Menos código = menos problemas\n",
-    "- Perfecto para análisis de datos\n",
-    "- Fácil de aprender y usar\n",
+    "¡Ya puedes transformar análisis deportivos en comunicación visual impactante y crear presentaciones que no solo informan sino que inspiran acción!\n",
     "\n",
-    "### Tu Siguiente Misión\n",
+    "**Tu transformación**: De consumidor pasivo de gráficos deportivos a creador activo de narrativas visuales persuasivas.\n",
     "\n",
-    "¡Practica con tus propios datos! Puedes analizar:\n",
-    "- Tu equipo favorito\n",
-    "- Otros deportes\n",
-    "- Cualquier dato que te interese\n",
+    "---\n",
     "\n",
-    "### ¡Sigue Practicando!\n",
-    "\n",
-    "Recuerda: **Los mejores analistas de datos empezaron como tú hoy**\n",
-    "\n",
-    "**¡Ya tienes las herramientas para crear visualizaciones increíbles!**\n",
-    "\n",
-    "---"
+    "*Has desarrollado la capacidad de hacer que los datos deportivos \"hablen\" visualmente, una habilidad esencial en el mundo moderno del análisis deportivo.*"
    ]
   }
  ],
